# LearningPython

basic-poetry-usage/: pyproject.toml
python-core/: pyproject.toml
python-core/src/python_core/: main.py  people_stats.py  person.py  stats.py
python-core/tests/: test_people_stats.py  test_person.py  test_stats.py
python-foundations-pluralsight/: pyproject.toml
