[project]
name = "basic-poetry-usage"
version = "0.1.0"
description = ""
authors = [
    {name = "Informatropico",email = "informatropico@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pendulum (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "basic_poetry_usage", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
