[project]
name = "python-foundations-pluralsight"
version = "0.1.0"
description = ""
authors = [
    {name = "Informatropico",email = "informatropico@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "python_foundations_pluralsight", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
